# mcp-fx-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cache.py  logging_conf.py  main.py  provider.py  schemas.py
tests/: test_main.py
